parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE

Grammar

Rule 0     S' -> program
Rule 1     program -> global_stmt_list
Rule 2     global_stmt_list -> empty
Rule 3     global_stmt_list -> global_stmt global_stmt_list
Rule 4     global_stmt -> declaration
Rule 5     global_stmt -> function
Rule 6     function -> VOID function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE
Rule 7     function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE
Rule 8     function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON
Rule 9     function -> VOID function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON
Rule 10    function_var -> IDENTIFIER
Rule 11    function_var -> ASTERISK function_var
Rule 12    paramlist -> DATA_TYPE decl_var
Rule 13    paramlist -> paramlist COMMA DATA_TYPE decl_var
Rule 14    paramlist -> empty
Rule 15    function_body -> statement_list return_statement
Rule 16    return_statement -> RETURN expression SEMICOLON
Rule 17    return_statement -> RETURN SEMICOLON
Rule 18    return_statement -> empty
Rule 19    function_dummy -> empty
Rule 20    function_proto_dummy -> empty
Rule 21    statement_list -> statement_list statement
Rule 22    statement_list -> empty
Rule 23    statement -> declaration
Rule 24    statement -> assignment
Rule 25    statement -> function_call SEMICOLON
Rule 26    statement -> while_block
Rule 27    statement -> if_else_block
Rule 28    statement_block -> statement
Rule 29    statement_block -> SEMICOLON
Rule 30    statement_block -> LBRACE statement_list RBRACE
Rule 31    if_block -> IF LPAREN condition RPAREN statement_block
Rule 32    else_block -> ELSE statement_block
Rule 33    if_else_block -> if_block
Rule 34    if_else_block -> if_block else_block
Rule 35    while_block -> WHILE LPAREN condition RPAREN statement_block
Rule 36    declaration -> DATA_TYPE decl_var_list SEMICOLON
Rule 37    decl_var_list -> decl_var
Rule 38    decl_var_list -> decl_var_list COMMA decl_var
Rule 39    decl_var -> IDENTIFIER
Rule 40    decl_var -> ASTERISK decl_var
Rule 41    pointer_var -> ASTERISK pointer_var
Rule 42    pointer_var -> ASTERISK scalar_var
Rule 43    scalar_var -> IDENTIFIER
Rule 44    scalar_var -> AMPERSAND IDENTIFIER
Rule 45    assignment -> pointer_var EQUALS expression SEMICOLON
Rule 46    assignment -> IDENTIFIER EQUALS expression SEMICOLON
Rule 47    expression -> expression PLUS expression
Rule 48    expression -> expression MINUS expression
Rule 49    expression -> LPAREN expression RPAREN
Rule 50    expression -> expression ASTERISK expression
Rule 51    expression -> expression FSLASH expression
Rule 52    expression -> MINUS expression
Rule 53    expression -> function_call
Rule 54    function_call -> IDENTIFIER LPAREN arglist RPAREN
Rule 55    function_call -> IDENTIFIER LPAREN RPAREN
Rule 56    function_call -> ASTERISK function_call
Rule 57    arglist -> arglist COMMA expression
Rule 58    arglist -> expression
Rule 59    condition -> expression EE expression
Rule 60    condition -> expression NE expression
Rule 61    condition -> expression LT expression
Rule 62    condition -> expression GT expression
Rule 63    condition -> expression LTE expression
Rule 64    condition -> expression GTE expression
Rule 65    condition -> condition AMPERSAND AMPERSAND condition
Rule 66    condition -> condition PIPE PIPE condition
Rule 67    condition -> LPAREN condition RPAREN
Rule 68    expression -> CONSTANT
Rule 69    expression -> pointer_var
Rule 70    expression -> scalar_var
Rule 71    empty -> <empty>

Terminals, with rules where they appear

AMPERSAND            : 44 65 65
ASTERISK             : 11 40 41 42 50 56
COMMA                : 13 38 57
CONSTANT             : 68
DATA_TYPE            : 7 8 12 13 36
EE                   : 59
ELSE                 : 32
EQUALS               : 45 46
FSLASH               : 51
GT                   : 62
GTE                  : 64
IDENTIFIER           : 10 39 43 44 46 54 55
IF                   : 31
LBRACE               : 6 7 30
LPAREN               : 6 7 8 9 31 35 49 54 55 67
LT                   : 61
LTE                  : 63
MINUS                : 48 52
NE                   : 60
NEWLINE              : 
PIPE                 : 66 66
PLUS                 : 47
RBRACE               : 6 7 30
RETURN               : 16 17
RPAREN               : 6 7 8 9 31 35 49 54 55 67
SEMICOLON            : 8 9 16 17 25 29 36 45 46
VOID                 : 6 9
WHILE                : 35
error                : 

Nonterminals, with rules where they appear

arglist              : 54 57
assignment           : 24
condition            : 31 35 65 65 66 66 67
decl_var             : 12 13 37 38 40
decl_var_list        : 36 38
declaration          : 4 23
else_block           : 34
empty                : 2 14 18 19 20 22
expression           : 16 45 46 47 47 48 48 49 50 50 51 51 52 57 58 59 59 60 60 61 61 62 62 63 63 64 64
function             : 5
function_body        : 6 7
function_call        : 25 53 56
function_dummy       : 6 7
function_proto_dummy : 8 9
function_var         : 6 7 8 9 11
global_stmt          : 3
global_stmt_list     : 1 3
if_block             : 33 34
if_else_block        : 27
paramlist            : 6 7 8 9 13
pointer_var          : 41 45 69
program              : 0
return_statement     : 15
scalar_var           : 42 70
statement            : 21 28
statement_block      : 31 32 35
statement_list       : 15 21 30
while_block          : 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_stmt_list
    (2) global_stmt_list -> . empty
    (3) global_stmt_list -> . global_stmt global_stmt_list
    (71) empty -> .
    (4) global_stmt -> . declaration
    (5) global_stmt -> . function
    (36) declaration -> . DATA_TYPE decl_var_list SEMICOLON
    (6) function -> . VOID function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE
    (7) function -> . DATA_TYPE function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE
    (8) function -> . DATA_TYPE function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON
    (9) function -> . VOID function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON

    $end            reduce using rule 71 (empty -> .)
    DATA_TYPE       shift and go to state 7
    VOID            shift and go to state 8

    program                        shift and go to state 1
    global_stmt_list               shift and go to state 2
    empty                          shift and go to state 3
    global_stmt                    shift and go to state 4
    declaration                    shift and go to state 5
    function                       shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> global_stmt_list .

    $end            reduce using rule 1 (program -> global_stmt_list .)


state 3

    (2) global_stmt_list -> empty .

    $end            reduce using rule 2 (global_stmt_list -> empty .)


state 4

    (3) global_stmt_list -> global_stmt . global_stmt_list
    (2) global_stmt_list -> . empty
    (3) global_stmt_list -> . global_stmt global_stmt_list
    (71) empty -> .
    (4) global_stmt -> . declaration
    (5) global_stmt -> . function
    (36) declaration -> . DATA_TYPE decl_var_list SEMICOLON
    (6) function -> . VOID function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE
    (7) function -> . DATA_TYPE function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE
    (8) function -> . DATA_TYPE function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON
    (9) function -> . VOID function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON

    $end            reduce using rule 71 (empty -> .)
    DATA_TYPE       shift and go to state 7
    VOID            shift and go to state 8

    global_stmt                    shift and go to state 4
    global_stmt_list               shift and go to state 9
    empty                          shift and go to state 3
    declaration                    shift and go to state 5
    function                       shift and go to state 6

state 5

    (4) global_stmt -> declaration .

    DATA_TYPE       reduce using rule 4 (global_stmt -> declaration .)
    VOID            reduce using rule 4 (global_stmt -> declaration .)
    $end            reduce using rule 4 (global_stmt -> declaration .)


state 6

    (5) global_stmt -> function .

    DATA_TYPE       reduce using rule 5 (global_stmt -> function .)
    VOID            reduce using rule 5 (global_stmt -> function .)
    $end            reduce using rule 5 (global_stmt -> function .)


state 7

    (36) declaration -> DATA_TYPE . decl_var_list SEMICOLON
    (7) function -> DATA_TYPE . function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE
    (8) function -> DATA_TYPE . function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON
    (37) decl_var_list -> . decl_var
    (38) decl_var_list -> . decl_var_list COMMA decl_var
    (10) function_var -> . IDENTIFIER
    (11) function_var -> . ASTERISK function_var
    (39) decl_var -> . IDENTIFIER
    (40) decl_var -> . ASTERISK decl_var

    IDENTIFIER      shift and go to state 13
    ASTERISK        shift and go to state 14

    decl_var_list                  shift and go to state 10
    function_var                   shift and go to state 11
    decl_var                       shift and go to state 12

state 8

    (6) function -> VOID . function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE
    (9) function -> VOID . function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON
    (10) function_var -> . IDENTIFIER
    (11) function_var -> . ASTERISK function_var

    IDENTIFIER      shift and go to state 16
    ASTERISK        shift and go to state 17

    function_var                   shift and go to state 15

state 9

    (3) global_stmt_list -> global_stmt global_stmt_list .

    $end            reduce using rule 3 (global_stmt_list -> global_stmt global_stmt_list .)


state 10

    (36) declaration -> DATA_TYPE decl_var_list . SEMICOLON
    (38) decl_var_list -> decl_var_list . COMMA decl_var

    SEMICOLON       shift and go to state 18
    COMMA           shift and go to state 19


state 11

    (7) function -> DATA_TYPE function_var . LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE
    (8) function -> DATA_TYPE function_var . LPAREN paramlist RPAREN function_proto_dummy SEMICOLON

    LPAREN          shift and go to state 20


state 12

    (37) decl_var_list -> decl_var .

    SEMICOLON       reduce using rule 37 (decl_var_list -> decl_var .)
    COMMA           reduce using rule 37 (decl_var_list -> decl_var .)


state 13

    (10) function_var -> IDENTIFIER .
    (39) decl_var -> IDENTIFIER .

    LPAREN          reduce using rule 10 (function_var -> IDENTIFIER .)
    SEMICOLON       reduce using rule 39 (decl_var -> IDENTIFIER .)
    COMMA           reduce using rule 39 (decl_var -> IDENTIFIER .)


state 14

    (11) function_var -> ASTERISK . function_var
    (40) decl_var -> ASTERISK . decl_var
    (10) function_var -> . IDENTIFIER
    (11) function_var -> . ASTERISK function_var
    (39) decl_var -> . IDENTIFIER
    (40) decl_var -> . ASTERISK decl_var

    IDENTIFIER      shift and go to state 13
    ASTERISK        shift and go to state 14

    function_var                   shift and go to state 21
    decl_var                       shift and go to state 22

state 15

    (6) function -> VOID function_var . LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE
    (9) function -> VOID function_var . LPAREN paramlist RPAREN function_proto_dummy SEMICOLON

    LPAREN          shift and go to state 23


state 16

    (10) function_var -> IDENTIFIER .

    LPAREN          reduce using rule 10 (function_var -> IDENTIFIER .)


state 17

    (11) function_var -> ASTERISK . function_var
    (10) function_var -> . IDENTIFIER
    (11) function_var -> . ASTERISK function_var

    IDENTIFIER      shift and go to state 16
    ASTERISK        shift and go to state 17

    function_var                   shift and go to state 21

state 18

    (36) declaration -> DATA_TYPE decl_var_list SEMICOLON .

    DATA_TYPE       reduce using rule 36 (declaration -> DATA_TYPE decl_var_list SEMICOLON .)
    VOID            reduce using rule 36 (declaration -> DATA_TYPE decl_var_list SEMICOLON .)
    $end            reduce using rule 36 (declaration -> DATA_TYPE decl_var_list SEMICOLON .)
    RETURN          reduce using rule 36 (declaration -> DATA_TYPE decl_var_list SEMICOLON .)
    IDENTIFIER      reduce using rule 36 (declaration -> DATA_TYPE decl_var_list SEMICOLON .)
    ASTERISK        reduce using rule 36 (declaration -> DATA_TYPE decl_var_list SEMICOLON .)
    WHILE           reduce using rule 36 (declaration -> DATA_TYPE decl_var_list SEMICOLON .)
    IF              reduce using rule 36 (declaration -> DATA_TYPE decl_var_list SEMICOLON .)
    RBRACE          reduce using rule 36 (declaration -> DATA_TYPE decl_var_list SEMICOLON .)
    ELSE            reduce using rule 36 (declaration -> DATA_TYPE decl_var_list SEMICOLON .)


state 19

    (38) decl_var_list -> decl_var_list COMMA . decl_var
    (39) decl_var -> . IDENTIFIER
    (40) decl_var -> . ASTERISK decl_var

    IDENTIFIER      shift and go to state 25
    ASTERISK        shift and go to state 26

    decl_var                       shift and go to state 24

state 20

    (7) function -> DATA_TYPE function_var LPAREN . paramlist RPAREN function_dummy LBRACE function_body RBRACE
    (8) function -> DATA_TYPE function_var LPAREN . paramlist RPAREN function_proto_dummy SEMICOLON
    (12) paramlist -> . DATA_TYPE decl_var
    (13) paramlist -> . paramlist COMMA DATA_TYPE decl_var
    (14) paramlist -> . empty
    (71) empty -> .

    DATA_TYPE       shift and go to state 27
    RPAREN          reduce using rule 71 (empty -> .)
    COMMA           reduce using rule 71 (empty -> .)

    paramlist                      shift and go to state 28
    empty                          shift and go to state 29

state 21

    (11) function_var -> ASTERISK function_var .

    LPAREN          reduce using rule 11 (function_var -> ASTERISK function_var .)


state 22

    (40) decl_var -> ASTERISK decl_var .

    SEMICOLON       reduce using rule 40 (decl_var -> ASTERISK decl_var .)
    COMMA           reduce using rule 40 (decl_var -> ASTERISK decl_var .)
    RPAREN          reduce using rule 40 (decl_var -> ASTERISK decl_var .)


state 23

    (6) function -> VOID function_var LPAREN . paramlist RPAREN function_dummy LBRACE function_body RBRACE
    (9) function -> VOID function_var LPAREN . paramlist RPAREN function_proto_dummy SEMICOLON
    (12) paramlist -> . DATA_TYPE decl_var
    (13) paramlist -> . paramlist COMMA DATA_TYPE decl_var
    (14) paramlist -> . empty
    (71) empty -> .

    DATA_TYPE       shift and go to state 27
    RPAREN          reduce using rule 71 (empty -> .)
    COMMA           reduce using rule 71 (empty -> .)

    paramlist                      shift and go to state 30
    empty                          shift and go to state 29

state 24

    (38) decl_var_list -> decl_var_list COMMA decl_var .

    SEMICOLON       reduce using rule 38 (decl_var_list -> decl_var_list COMMA decl_var .)
    COMMA           reduce using rule 38 (decl_var_list -> decl_var_list COMMA decl_var .)


state 25

    (39) decl_var -> IDENTIFIER .

    SEMICOLON       reduce using rule 39 (decl_var -> IDENTIFIER .)
    COMMA           reduce using rule 39 (decl_var -> IDENTIFIER .)
    RPAREN          reduce using rule 39 (decl_var -> IDENTIFIER .)


state 26

    (40) decl_var -> ASTERISK . decl_var
    (39) decl_var -> . IDENTIFIER
    (40) decl_var -> . ASTERISK decl_var

    IDENTIFIER      shift and go to state 25
    ASTERISK        shift and go to state 26

    decl_var                       shift and go to state 22

state 27

    (12) paramlist -> DATA_TYPE . decl_var
    (39) decl_var -> . IDENTIFIER
    (40) decl_var -> . ASTERISK decl_var

    IDENTIFIER      shift and go to state 25
    ASTERISK        shift and go to state 26

    decl_var                       shift and go to state 31

state 28

    (7) function -> DATA_TYPE function_var LPAREN paramlist . RPAREN function_dummy LBRACE function_body RBRACE
    (8) function -> DATA_TYPE function_var LPAREN paramlist . RPAREN function_proto_dummy SEMICOLON
    (13) paramlist -> paramlist . COMMA DATA_TYPE decl_var

    RPAREN          shift and go to state 32
    COMMA           shift and go to state 33


state 29

    (14) paramlist -> empty .

    RPAREN          reduce using rule 14 (paramlist -> empty .)
    COMMA           reduce using rule 14 (paramlist -> empty .)


state 30

    (6) function -> VOID function_var LPAREN paramlist . RPAREN function_dummy LBRACE function_body RBRACE
    (9) function -> VOID function_var LPAREN paramlist . RPAREN function_proto_dummy SEMICOLON
    (13) paramlist -> paramlist . COMMA DATA_TYPE decl_var

    RPAREN          shift and go to state 34
    COMMA           shift and go to state 33


state 31

    (12) paramlist -> DATA_TYPE decl_var .

    RPAREN          reduce using rule 12 (paramlist -> DATA_TYPE decl_var .)
    COMMA           reduce using rule 12 (paramlist -> DATA_TYPE decl_var .)


state 32

    (7) function -> DATA_TYPE function_var LPAREN paramlist RPAREN . function_dummy LBRACE function_body RBRACE
    (8) function -> DATA_TYPE function_var LPAREN paramlist RPAREN . function_proto_dummy SEMICOLON
    (19) function_dummy -> . empty
    (20) function_proto_dummy -> . empty
    (71) empty -> .

    LBRACE          reduce using rule 71 (empty -> .)
    SEMICOLON       reduce using rule 71 (empty -> .)

    function_dummy                 shift and go to state 35
    function_proto_dummy           shift and go to state 36
    empty                          shift and go to state 37

state 33

    (13) paramlist -> paramlist COMMA . DATA_TYPE decl_var

    DATA_TYPE       shift and go to state 38


state 34

    (6) function -> VOID function_var LPAREN paramlist RPAREN . function_dummy LBRACE function_body RBRACE
    (9) function -> VOID function_var LPAREN paramlist RPAREN . function_proto_dummy SEMICOLON
    (19) function_dummy -> . empty
    (20) function_proto_dummy -> . empty
    (71) empty -> .

    LBRACE          reduce using rule 71 (empty -> .)
    SEMICOLON       reduce using rule 71 (empty -> .)

    function_dummy                 shift and go to state 39
    function_proto_dummy           shift and go to state 40
    empty                          shift and go to state 37

state 35

    (7) function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_dummy . LBRACE function_body RBRACE

    LBRACE          shift and go to state 41


state 36

    (8) function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_proto_dummy . SEMICOLON

    SEMICOLON       shift and go to state 42


state 37

    (19) function_dummy -> empty .
    (20) function_proto_dummy -> empty .

    LBRACE          reduce using rule 19 (function_dummy -> empty .)
    SEMICOLON       reduce using rule 20 (function_proto_dummy -> empty .)


state 38

    (13) paramlist -> paramlist COMMA DATA_TYPE . decl_var
    (39) decl_var -> . IDENTIFIER
    (40) decl_var -> . ASTERISK decl_var

    IDENTIFIER      shift and go to state 25
    ASTERISK        shift and go to state 26

    decl_var                       shift and go to state 43

state 39

    (6) function -> VOID function_var LPAREN paramlist RPAREN function_dummy . LBRACE function_body RBRACE

    LBRACE          shift and go to state 44


state 40

    (9) function -> VOID function_var LPAREN paramlist RPAREN function_proto_dummy . SEMICOLON

    SEMICOLON       shift and go to state 45


state 41

    (7) function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_dummy LBRACE . function_body RBRACE
    (15) function_body -> . statement_list return_statement
    (21) statement_list -> . statement_list statement
    (22) statement_list -> . empty
    (71) empty -> .

    RETURN          reduce using rule 71 (empty -> .)
    DATA_TYPE       reduce using rule 71 (empty -> .)
    IDENTIFIER      reduce using rule 71 (empty -> .)
    ASTERISK        reduce using rule 71 (empty -> .)
    WHILE           reduce using rule 71 (empty -> .)
    IF              reduce using rule 71 (empty -> .)
    RBRACE          reduce using rule 71 (empty -> .)

    function_body                  shift and go to state 46
    statement_list                 shift and go to state 47
    empty                          shift and go to state 48

state 42

    (8) function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON .

    DATA_TYPE       reduce using rule 8 (function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON .)
    VOID            reduce using rule 8 (function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON .)
    $end            reduce using rule 8 (function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON .)


state 43

    (13) paramlist -> paramlist COMMA DATA_TYPE decl_var .

    RPAREN          reduce using rule 13 (paramlist -> paramlist COMMA DATA_TYPE decl_var .)
    COMMA           reduce using rule 13 (paramlist -> paramlist COMMA DATA_TYPE decl_var .)


state 44

    (6) function -> VOID function_var LPAREN paramlist RPAREN function_dummy LBRACE . function_body RBRACE
    (15) function_body -> . statement_list return_statement
    (21) statement_list -> . statement_list statement
    (22) statement_list -> . empty
    (71) empty -> .

    RETURN          reduce using rule 71 (empty -> .)
    DATA_TYPE       reduce using rule 71 (empty -> .)
    IDENTIFIER      reduce using rule 71 (empty -> .)
    ASTERISK        reduce using rule 71 (empty -> .)
    WHILE           reduce using rule 71 (empty -> .)
    IF              reduce using rule 71 (empty -> .)
    RBRACE          reduce using rule 71 (empty -> .)

    function_body                  shift and go to state 49
    statement_list                 shift and go to state 47
    empty                          shift and go to state 48

state 45

    (9) function -> VOID function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON .

    DATA_TYPE       reduce using rule 9 (function -> VOID function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON .)
    VOID            reduce using rule 9 (function -> VOID function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON .)
    $end            reduce using rule 9 (function -> VOID function_var LPAREN paramlist RPAREN function_proto_dummy SEMICOLON .)


state 46

    (7) function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body . RBRACE

    RBRACE          shift and go to state 50


state 47

    (15) function_body -> statement_list . return_statement
    (21) statement_list -> statement_list . statement
    (16) return_statement -> . RETURN expression SEMICOLON
    (17) return_statement -> . RETURN SEMICOLON
    (18) return_statement -> . empty
    (23) statement -> . declaration
    (24) statement -> . assignment
    (25) statement -> . function_call SEMICOLON
    (26) statement -> . while_block
    (27) statement -> . if_else_block
    (71) empty -> .
    (36) declaration -> . DATA_TYPE decl_var_list SEMICOLON
    (45) assignment -> . pointer_var EQUALS expression SEMICOLON
    (46) assignment -> . IDENTIFIER EQUALS expression SEMICOLON
    (54) function_call -> . IDENTIFIER LPAREN arglist RPAREN
    (55) function_call -> . IDENTIFIER LPAREN RPAREN
    (56) function_call -> . ASTERISK function_call
    (35) while_block -> . WHILE LPAREN condition RPAREN statement_block
    (33) if_else_block -> . if_block
    (34) if_else_block -> . if_block else_block
    (41) pointer_var -> . ASTERISK pointer_var
    (42) pointer_var -> . ASTERISK scalar_var
    (31) if_block -> . IF LPAREN condition RPAREN statement_block

    RETURN          shift and go to state 53
    RBRACE          reduce using rule 71 (empty -> .)
    DATA_TYPE       shift and go to state 60
    IDENTIFIER      shift and go to state 62
    ASTERISK        shift and go to state 63
    WHILE           shift and go to state 64
    IF              shift and go to state 66

    return_statement               shift and go to state 51
    statement                      shift and go to state 52
    empty                          shift and go to state 54
    declaration                    shift and go to state 55
    assignment                     shift and go to state 56
    function_call                  shift and go to state 57
    while_block                    shift and go to state 58
    if_else_block                  shift and go to state 59
    pointer_var                    shift and go to state 61
    if_block                       shift and go to state 65

state 48

    (22) statement_list -> empty .

    RETURN          reduce using rule 22 (statement_list -> empty .)
    DATA_TYPE       reduce using rule 22 (statement_list -> empty .)
    IDENTIFIER      reduce using rule 22 (statement_list -> empty .)
    ASTERISK        reduce using rule 22 (statement_list -> empty .)
    WHILE           reduce using rule 22 (statement_list -> empty .)
    IF              reduce using rule 22 (statement_list -> empty .)
    RBRACE          reduce using rule 22 (statement_list -> empty .)


state 49

    (6) function -> VOID function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body . RBRACE

    RBRACE          shift and go to state 67


state 50

    (7) function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE .

    DATA_TYPE       reduce using rule 7 (function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE .)
    VOID            reduce using rule 7 (function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE .)
    $end            reduce using rule 7 (function -> DATA_TYPE function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE .)


state 51

    (15) function_body -> statement_list return_statement .

    RBRACE          reduce using rule 15 (function_body -> statement_list return_statement .)


state 52

    (21) statement_list -> statement_list statement .

    RETURN          reduce using rule 21 (statement_list -> statement_list statement .)
    DATA_TYPE       reduce using rule 21 (statement_list -> statement_list statement .)
    IDENTIFIER      reduce using rule 21 (statement_list -> statement_list statement .)
    ASTERISK        reduce using rule 21 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 21 (statement_list -> statement_list statement .)
    IF              reduce using rule 21 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 21 (statement_list -> statement_list statement .)


state 53

    (16) return_statement -> RETURN . expression SEMICOLON
    (17) return_statement -> RETURN . SEMICOLON
    (47) expression -> . expression PLUS expression
    (48) expression -> . expression MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . expression ASTERISK expression
    (51) expression -> . expression FSLASH expression
    (52) expression -> . MINUS expression
    (53) expression -> . function_call
    (68) expression -> . CONSTANT
    (69) expression -> . pointer_var
    (70) expression -> . scalar_var
    (54) function_call -> . IDENTIFIER LPAREN arglist RPAREN
    (55) function_call -> . IDENTIFIER LPAREN RPAREN
    (56) function_call -> . ASTERISK function_call
    (41) pointer_var -> . ASTERISK pointer_var
    (42) pointer_var -> . ASTERISK scalar_var
    (43) scalar_var -> . IDENTIFIER
    (44) scalar_var -> . AMPERSAND IDENTIFIER

    SEMICOLON       shift and go to state 69
    LPAREN          shift and go to state 71
    MINUS           shift and go to state 70
    CONSTANT        shift and go to state 73
    IDENTIFIER      shift and go to state 76
    ASTERISK        shift and go to state 63
    AMPERSAND       shift and go to state 77

    expression                     shift and go to state 68
    function_call                  shift and go to state 72
    pointer_var                    shift and go to state 74
    scalar_var                     shift and go to state 75

state 54

    (18) return_statement -> empty .

    RBRACE          reduce using rule 18 (return_statement -> empty .)


state 55

    (23) statement -> declaration .

    RETURN          reduce using rule 23 (statement -> declaration .)
    DATA_TYPE       reduce using rule 23 (statement -> declaration .)
    IDENTIFIER      reduce using rule 23 (statement -> declaration .)
    ASTERISK        reduce using rule 23 (statement -> declaration .)
    WHILE           reduce using rule 23 (statement -> declaration .)
    IF              reduce using rule 23 (statement -> declaration .)
    RBRACE          reduce using rule 23 (statement -> declaration .)
    ELSE            reduce using rule 23 (statement -> declaration .)


state 56

    (24) statement -> assignment .

    RETURN          reduce using rule 24 (statement -> assignment .)
    DATA_TYPE       reduce using rule 24 (statement -> assignment .)
    IDENTIFIER      reduce using rule 24 (statement -> assignment .)
    ASTERISK        reduce using rule 24 (statement -> assignment .)
    WHILE           reduce using rule 24 (statement -> assignment .)
    IF              reduce using rule 24 (statement -> assignment .)
    RBRACE          reduce using rule 24 (statement -> assignment .)
    ELSE            reduce using rule 24 (statement -> assignment .)


state 57

    (25) statement -> function_call . SEMICOLON

    SEMICOLON       shift and go to state 78


state 58

    (26) statement -> while_block .

    RETURN          reduce using rule 26 (statement -> while_block .)
    DATA_TYPE       reduce using rule 26 (statement -> while_block .)
    IDENTIFIER      reduce using rule 26 (statement -> while_block .)
    ASTERISK        reduce using rule 26 (statement -> while_block .)
    WHILE           reduce using rule 26 (statement -> while_block .)
    IF              reduce using rule 26 (statement -> while_block .)
    RBRACE          reduce using rule 26 (statement -> while_block .)
    ELSE            reduce using rule 26 (statement -> while_block .)


state 59

    (27) statement -> if_else_block .

    RETURN          reduce using rule 27 (statement -> if_else_block .)
    DATA_TYPE       reduce using rule 27 (statement -> if_else_block .)
    IDENTIFIER      reduce using rule 27 (statement -> if_else_block .)
    ASTERISK        reduce using rule 27 (statement -> if_else_block .)
    WHILE           reduce using rule 27 (statement -> if_else_block .)
    IF              reduce using rule 27 (statement -> if_else_block .)
    RBRACE          reduce using rule 27 (statement -> if_else_block .)
    ELSE            reduce using rule 27 (statement -> if_else_block .)


state 60

    (36) declaration -> DATA_TYPE . decl_var_list SEMICOLON
    (37) decl_var_list -> . decl_var
    (38) decl_var_list -> . decl_var_list COMMA decl_var
    (39) decl_var -> . IDENTIFIER
    (40) decl_var -> . ASTERISK decl_var

    IDENTIFIER      shift and go to state 25
    ASTERISK        shift and go to state 26

    decl_var_list                  shift and go to state 10
    decl_var                       shift and go to state 12

state 61

    (45) assignment -> pointer_var . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 79


state 62

    (46) assignment -> IDENTIFIER . EQUALS expression SEMICOLON
    (54) function_call -> IDENTIFIER . LPAREN arglist RPAREN
    (55) function_call -> IDENTIFIER . LPAREN RPAREN

    EQUALS          shift and go to state 80
    LPAREN          shift and go to state 81


state 63

    (56) function_call -> ASTERISK . function_call
    (41) pointer_var -> ASTERISK . pointer_var
    (42) pointer_var -> ASTERISK . scalar_var
    (54) function_call -> . IDENTIFIER LPAREN arglist RPAREN
    (55) function_call -> . IDENTIFIER LPAREN RPAREN
    (56) function_call -> . ASTERISK function_call
    (41) pointer_var -> . ASTERISK pointer_var
    (42) pointer_var -> . ASTERISK scalar_var
    (43) scalar_var -> . IDENTIFIER
    (44) scalar_var -> . AMPERSAND IDENTIFIER

    IDENTIFIER      shift and go to state 76
    ASTERISK        shift and go to state 63
    AMPERSAND       shift and go to state 77

    function_call                  shift and go to state 82
    pointer_var                    shift and go to state 83
    scalar_var                     shift and go to state 84

state 64

    (35) while_block -> WHILE . LPAREN condition RPAREN statement_block

    LPAREN          shift and go to state 85


state 65

    (33) if_else_block -> if_block .
    (34) if_else_block -> if_block . else_block
    (32) else_block -> . ELSE statement_block

    RETURN          reduce using rule 33 (if_else_block -> if_block .)
    DATA_TYPE       reduce using rule 33 (if_else_block -> if_block .)
    IDENTIFIER      reduce using rule 33 (if_else_block -> if_block .)
    ASTERISK        reduce using rule 33 (if_else_block -> if_block .)
    WHILE           reduce using rule 33 (if_else_block -> if_block .)
    IF              reduce using rule 33 (if_else_block -> if_block .)
    RBRACE          reduce using rule 33 (if_else_block -> if_block .)
    ELSE            shift and go to state 87

  ! ELSE            [ reduce using rule 33 (if_else_block -> if_block .) ]

    else_block                     shift and go to state 86

state 66

    (31) if_block -> IF . LPAREN condition RPAREN statement_block

    LPAREN          shift and go to state 88


state 67

    (6) function -> VOID function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE .

    DATA_TYPE       reduce using rule 6 (function -> VOID function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE .)
    VOID            reduce using rule 6 (function -> VOID function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE .)
    $end            reduce using rule 6 (function -> VOID function_var LPAREN paramlist RPAREN function_dummy LBRACE function_body RBRACE .)


state 68

    (16) return_statement -> RETURN expression . SEMICOLON
    (47) expression -> expression . PLUS expression
    (48) expression -> expression . MINUS expression
    (50) expression -> expression . ASTERISK expression
    (51) expression -> expression . FSLASH expression
